@@ -12,6 +12,9 @@ What's New in Python 2.4 alpha 1?
 Core and builtins
 -----------------
 
+- Improved the tuple hashing algorithm to give fewer collisions in
+  common cases.  Fixes bug  #942952.
+
 - Implemented generator expressions (PEP 289).  Coded by Jiwon Seo.
 
 - Enabled the profiling of C extension functions (and builtins) - check
